--- a/baekjoon/dp/-dd.a.dSYM/Contents/Info.plist
+++ b/baekjoon/dp/-dd.a.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.-1026.a</string>
+		<string>com.apple.xcode.dsym.-dd.a</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
